Address an issue with long names that overflow the card.
Long names were causing going outside of the card.  This will prevent that from happening.

--- a/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/map_modules/components/_card.scss
@@ -41,7 +41,7 @@
         padding: .25em;
         margin: 0;
         width: 100%;
-        flex: 1;
+        flex: 1 0 auto;
         flex-flow: row nowrap;
         justify-content: flex-start;
         align-items: stretch;
@@ -57,6 +57,7 @@
             flex: 1;
             padding: 0 .5em;
             margin: auto;
+            overflow: hidden;
 
             .card-body-primary-text {
                 margin: 0;
